--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "React typescript and jest powered bolerplate in order to easily create npm modules",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
+    "postinstall": "install-peers -f && cd example && npm i",
+    "start": "concurrently --kill-others \"npm run build-watch\" \"npm run start-example\"",
     "start-example": "cd example && npm start",
     "test": "jest"
   },
@@ -20,16 +23,17 @@
     "boilerplate"
   ],
   "author": "Tudor Filipovici @techbinator",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.1",
+    "concurrently": "^5.0.1",
+    "install-peers-cli": "^2.1.1",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts-ts": "^3.1.0",
     "react-test-renderer": "^16.12.0",
     "rollup": "^1.27.8",
     "rollup-plugin-commonjs": "^10.1.0",
