--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-typescript-npm-boilerplate": "file:..",
     "typescript": "^3.7.3"
   },
   "scripts": {
