Implement post install for create-react-app dep and also fix issue where on first load the crea-react-app was loading a blank page https://github.com/facebook/create-react-app/issues/5809

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
     "deploy-example": "cd example && npm run deploy",
+    "postinstall": "cd example && npm i",
     "start": "concurrently --kill-others \"npm run build-watch\" \"npm run start-example\"",
-    "start-example": "cd example && npm start",
+    "start-example": "sleep 4 && cd example && npm start",
     "test": "jest"
   },
   "keywords": [
