--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
   },
   "keywords": [
     "react",
+    "react npm library boilerplate",
+    "react typescript npm boilerplate",
+    "npm boilerplate",
+    "react typescript jest boilerplate",
+    "react typescript jest plugin boilerplate",
+    "react typescript jest npm plugin boilerplate",
+    "npm plugin",
+    "npm library boilerplate",
+    "react",
     "typescript",
     "npm",
     "boilerplate",
@@ -30,12 +39,19 @@
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.1",
+    "autoprefixer": "^9.7.3",
     "concurrently": "^5.0.1",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-test-renderer": "^16.12.0",
     "rollup": "^1.27.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss-modules": "^2.0.1",
+    "rollup-plugin-scss": "^2.1.0",
     "rollup-plugin-typescript2": "^0.25.3",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
