--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-test-renderer": "^16.9.1",
     "autoprefixer": "^9.7.3",
     "concurrently": "^5.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -49,9 +50,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-postcss-modules": "^2.0.1",
-    "rollup-plugin-scss": "^2.1.0",
     "rollup-plugin-typescript2": "^0.25.3",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
@@ -62,7 +61,10 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   },
   "module": "build/index.es.js",
   "jsnext:main": "build/index.es.js",
